# pickleguard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DETECTION.md  demo.tape
fixtures/: benign.pkl  malicious_eval.pkl  malicious_os_system.pkl  malicious_posix_bypass.pkl  model_evil.pt  model_safe.pt
scripts/: build_fixtures.py
src/pickleguard/: __init__.py  __main__.py  cli.py  engine.py  loaders.py  models.py  report.py  scanner.py
tests/: test_engine.py  test_report.py  test_scanner.py
